Fix navbar on mobile

--- a/frontend/src/home/home_mobile.css
+++ b/frontend/src/home/home_mobile.css
@@ -30,13 +30,13 @@
   }
   .title {
     margin-top: 10%;
-    font-size: 35px;
+    font-size: 30px;
     margin-top: -8px;
     color: #f6e58d;
   }
   #navBar {
     position: relative;
-    bottom: 8vh;
+    bottom: 4vh;
   }
   #netLinks {
     position: absolute;
